# cllmi

./: CLAUDE.md  Cargo.toml  README.md  build.sh  release.sh
Formula/: cllmi.rb
bugs/: 2026-01-08-no-content-on-model-response.md
src/: interface.rs  main.rs  sysprompt.rs
