[package]
name = "cllmi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cllmi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clipboard = "0.5.0"
config = "0.14.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros"] }
